# Component-Based-App

./: Class diagram  README.md  requirements.txt
api/src/plugin/models/: graph.py
api/src/plugin/services/: service_base.py
block_visualizer/: pyproject.toml
block_visualizer/src/plugin/: block_visualizer.py  mainView.html
core/: pyproject.toml
core/pkg/: console_main.py
core/src/use_cases/: load.py  main.py  main_view.py
data_source_github/: pyproject.toml
data_source_github/src/pkg/: data_source.py
data_source_github/src/plugin/: data_source.py
data_source_tiktok/: pyproject.toml
data_source_tiktok/src/plugin/: data_source.py
graph_explorer/: db.sqlite3
graph_explorer/app/: urls.py  views.py
graph_explorer/app/static/: index.css
graph_explorer/app/templates/: index.html
graph_explorer/graph_explorer/: settings.py  urls.py
simple_visualizer/: pyproject.toml
simple_visualizer/src/plugin/: mainView.html  simple_visualizer.py
